--- a/mariil.html
+++ b/mariil.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <svg width='1000' height='1000'>
-            <ellipse cx="500" cy="150" rx="70" ry="80" stroke="black" stroke-width="1" fill= "rgb(0, 96, 255)" transform="rotate(20 540 170) translate(-30 23.5)"/> <!--orelha esquerda-->
-            <ellipse cx="720" cy="163" rx="70" ry="80" stroke="black" stroke-width="1" fill="rgb(0, 96, 255)" transform="rotate(-6 300 10) translate(-30 23.5)"/> <!--orelha direita-->
-            <ellipse cx="470" cy="162" rx="59" ry="65" stroke="black" stroke-width="1" fill="rgb(252, 61, 50)"/> <!--parte de dentro da orelha esquerda-->
-            <ellipse cx="714" cy="154" rx="59" ry="65" stroke="black" stroke-width="1" fill="rgb(252, 61, 50)"/> <!--parte de dentro da orelha direita-->
-            <!--calda-->
+            <ellipse cx="500" cy="150" rx="70" ry="80" stroke="black" stroke-width="1" fill= "rgb(0, 96, 255)" transform="rotate(20 540 170) translate(-30 23.5)"/> <!--left ear-->
+            <ellipse cx="720" cy="163" rx="70" ry="80" stroke="black" stroke-width="1" fill="rgb(0, 96, 255)" transform="rotate(-6 300 10) translate(-30 23.5)"/> <!--right ear-->
+            <ellipse cx="470" cy="162" rx="59" ry="65" stroke="black" stroke-width="1" fill="rgb(252, 61, 50)"/> 
+            <ellipse cx="714" cy="154" rx="59" ry="65" stroke="black" stroke-width="1" fill="rgb(252, 61, 50)"/> 
+            <!--tail-->
             <line  x1="420" y1="360" x2="480" y2="395" style="stroke: black;" stroke-width="8"/> 
             <line  x1="390" y1="400" x2="423" y2="360" style="stroke: black;" stroke-width="6"/>
             <line  x1="390" y1="400" x2="363" y2="360" style="stroke: black;" stroke-width="4"/>
@@ -19,35 +19,35 @@
             <circle cx="276" cy="320" r="20" fill="rgb(176,224,230)"/>
             <circle cx="240" cy="345" r="10" fill="rgb(176,224,230)"/>
             <!-------------------------------------------------------------------------------------------------------------->
-            <!--foot-->
+            <!--foots-->
             <ellipse cx="470" cy="440" rx="50" ry="20" fill="rgb(0, 96, 255)" stroke="black" stroke-width="1" />
             <ellipse cx="720" cy="440" rx="50" ry="20" fill="rgb(0, 96, 255)" stroke="black" stroke-width="1"/>
             <!----------------------------------------------------------------------------------------------------->
-            <!--corpo-->
+            <!--body-->
             <ellipse cx="600" cy="300" rx="150" ry="170" stroke="black" stroke-width="1" fill="rgb(0, 96, 255)"/> <!--corpo-->
             <ellipse cx="600" cy="357" rx="130" ry="113" stroke="black" stroke-width="1" fill="white"/> <!--parte branca do corpo-->
             <!---------------------------------------------------------------------------------------->
-            <!--braços-->
+            <!--arms-->
             <ellipse cx="462" cy="240" rx="50" ry="30" transform="rotate(20 300 480)" fill="rgb(0, 96, 255)" />
             <ellipse cx="590" cy="210" rx="50" ry="30" transform="rotate(-20 900 48)" fill="rgb(0, 96, 255)" />
             <!---------------------------------------------------------------------------->
-            <!--olho esquerdo-->
+            <!--left eye-->
             <circle cx="560" cy="205" r="10" fill="black"/> 
             <circle cx="560" cy="201" r="05" fill="white"/>
             <!---------------------------------------------------------------->
-            <!--olho direito-->
+            <!--right eye-->
             <circle cx="640" cy="205" r="10" fill="black"/> 
             <circle cx="640" cy="201" r="05" fill="white"/>
             <!------------------------------------------------->
-            <!--boca-->
+            <!--mouth-->
             <line x1="580" y1="225" x2="620" y2="225" style="stroke:black;" /> 
             <line x1="570" y1="220" x2="580" y2="225" style="stroke: black;"/> <!--boca risquinho da esquerda-->
             <line x1="630" y1="220" x2="620" y2="225" style="stroke: black;"/> <!--boca risquinho da direita-->
             <!------------------------>
-            <!--nariz-->
+            <!--nose-->
             <path id="Triangle" d="M 1 1 L 12 1 L 5 6 z"/>
             <use x="596" y="210" xlink:href="#Triangle"/>
-            <!--fim------------->
+            <!--end------------->
         </svg>
     </body>
 </HTML>
